# digithemis

./: README.md  pyproject.toml
digithemis/: example.env  main.py  user_state.json
digithemis/src/config/: __init__.py  conexao_db.py
digithemis/src/controllers/: __init__.py  advogado_controller.py  cliente_controller.py  especialide_controller.py
digithemis/src/errors/: __init__.py  autenticacao_error.py  registro_error.py  senha_error.py  validacao_error.py
digithemis/src/models/: __init__.py  advogado_especialidade_model.py  advogado_model.py  cliente_model.py  documento_model.py  especialidade_model.py  processo_cliente_model.py  processo_model.py
digithemis/src/services/: __init__.py  advogado_service.py  cliente_service.py  documento_service.py  especialidade_service.py  processo_service.py
digithemis/src/utils/: Imagem.py  OCR.py  PDF_Leitor.py  __init__.py  gerencia_diretorios.py  seguranca.py  validacao_entradas.py
digithemis/src/views/: app.py  buscar_advogados.py  buscar_clientes.py  cadastrar_advogados.py  cadastrar_cliente.py  detalhes_cliente.py  editar_perfil.py  esqueci_senha.py  inserir_processo.py  login.py  menu_admin.py  menu_advogado.py  mudar_email.py  mudar_nome.py  mudar_numero.py  mudar_oab.py  mudar_senha.py  perfil_advogado.py
