[tool.poetry]
name = "digithemis"
version = "0.1.0"
description = ""
authors = ["Athílio Cavalcanti <athiliocavalcanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
